# startros2

./: .gitignore  LICENSE
chapter1/: CMakeLists.txt  hello_world.cpp  hello_world.py  read.md
chapter2/: CMakeLists.txt.bak  readme.md  ros2_cpp_node.cpp  ros2_python_node.py  test_args.cpp
chapter2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.bak.txt  CMakeLists.txt  package.xml
chapter2/chapt2_ws/src/demo_cpp_pkg/src/: learn_auto.cpp  learn_function.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
chapter2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
chapter2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  python_node.py  writer_node.py
chapter3/: readme.md
chapter3/topic_practice_ws/: readme.md
chapter3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapter3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapter3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapter3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapter3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapter3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chapter4/: readme.md  turtlesim_param.yaml
chapter4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapter4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapter4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
chapter4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
(+12 files in other folders)
